Improve API ✨
