# app/models/recipe.rb
@@ -2,15 +2,19 @@
 #
 # Table name: recipes
 #
-#  id            :uuid             not null, primary key
-#  author        :string
-#  content       :text
-#  license       :string
-#  source_url    :string
-#  title         :string
-#  total_minutes :integer
-#  created_at    :datetime         not null
-#  updated_at    :datetime         not null
+#  id                   :uuid             not null, primary key
+#  author               :string
+#  content              :text
+#  cook_time_in_minutes :integer
+#  license              :string
+#  prep_time_in_minutes :integer
+#  recipe_category      :string
+#  recipe_yield         :integer
+#  source_url           :string
+#  title                :string
+#  total_minutes        :integer
+#  created_at           :datetime         not null
+#  updated_at           :datetime         not null
 #
 class Recipe < ApplicationRecord
   include PgSearch::Model
